--- a/package.json
+++ b/package.json
@@ -16,34 +16,35 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^0.2.0",
+    "@hookform/resolvers": "^3.3.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "autoprefixer": "^10.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.292.0",
     "next": "^14.0.0",
+    "next-auth": "^4.24.0",
+    "next-intl": "^3.0.0",
+    "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next-intl": "^3.0.0",
-    "lucide-react": "^0.292.0",
-    "@supabase/supabase-js": "^2.38.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
-    "framer-motion": "^10.16.0",
     "react-hook-form": "^7.48.0",
-    "@hookform/resolvers": "^3.3.0",
-    "zod": "^3.22.0",
-    "date-fns": "^2.30.0",
-    "recharts": "^2.8.0",
     "react-hot-toast": "^2.4.0",
-    "next-auth": "^4.24.0",
-    "@auth/supabase-adapter": "^0.4.0",
-    "sharp": "^0.32.0"
+    "recharts": "^2.8.0",
+    "sharp": "^0.32.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/react-hot-toast": "^2.0.0",
     "@types/sharp": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -53,9 +54,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
-    "typescript": "^5.2.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "@tailwindcss/forms": "^0.5.0"
+    "typescript": "^5.2.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
